--- a/Property FW and wreath products/Bouts/graphes/CayleyZ.tex
+++ b/Property FW and wreath products/Bouts/graphes/CayleyZ.tex
@@ -1,4 +1,5 @@
 \begin{tikzpicture}[node distance=1.14cm,every node/.style=blacknode]
+\useasboundingbox (-3.1,-1.55) rectangle (7.62,0.08);
 \node (0){} ;
 \coordinate[left =0.5cm of 0] (a) ;
 \node (1)[right of=0]{} ;
