--- a/Property FW and wreath products/Bouts/graphes/path_semidirect_ends.tex
+++ b/Property FW and wreath products/Bouts/graphes/path_semidirect_ends.tex
@@ -1,4 +1,5 @@
 \begin{tikzpicture}
+\useasboundingbox (-4,0) rectangle (4,6);
 \fill[color = gray!20] (-4,0) -- (2,0) --(4,2) -- (-2,2) --cycle;
 \fill[color = gray!40] (0,0) -- (2,2) --(2,6) -- (0,4) --cycle;
 \fill[color = gray!20] (-4,4) -- (2,4) --(4,6) -- (-2,6) --cycle;
