--- a/Property FW and wreath products/Bouts/Introduction.tex
+++ b/Property FW and wreath products/Bouts/Introduction.tex
@@ -25,7 +25,7 @@ Property FW is a group property that is (for discrete groups) a weakening of the
 When working with group properties, it is natural to ask if they are stable under ``natural'' group operations. For example, one may wonder when a property is stable by subgroups, quotients, direct products or semi-direct products.
 A slightly less common operation, but still of great use in geometric group theory, is the wreath product, see Definition~\ref{Def:WreathProd}.
 
-In the context of properties defined by fixed points of actions, the first result concerning wreath products was due to Cherix, Martin and Valette and latter refined by Neuhauser and concern property (T).
+In the context of properties defined by fixed points of actions, the first result concerning wreath products was due to Cherix, Martin and Valette and latter refined by Neuhauser and concerns property (T).
 %
 %
 \begin{thm}[\cite{Cherix2004,Neuhauser2005a}] \label{T:Wreath_prop_T}
@@ -34,7 +34,7 @@ Let $G,H$ be two discrete groups with $G$ non-trivial and $X$ a set on which $H$
 %
 %
 A somewhat similar result for property FA was obtained by Cornulier and Kar in \cite{Cornulier2011}.
-Cornulier also proved in \cite{Cornulier2013} that if $G\wr_XH$ has property FW (and $G$ is non trivial), then $X$ is infinite.
+Cornulier also proved in \cite{Cornulier2013} that if $G\wr_XH$ has property FW (and $G$ is non trivial), then $X$ is finite.
 
 The aim of this note is to give an elementary proof of the analogous of Theorem~\ref{T:Wreath_prop_T} for property FW:
 %
@@ -48,7 +48,7 @@ Our proof will rely on a characterization of property FW via ends of Schreier gr
 
 At his point, the curious reader might have two questions. First, is it possible to extend Theorem \ref{Thm:Main} beyond the realms of finitely generated groups and of actions with finitely many orbits? And secondly, is there a link between Theorems \ref{T:Wreath_prop_T} and \ref{Thm:Main}?
 In both cases, the answer is yes.
-This is the subject of the forthcoming and more technical \cite{LS2021}, which gives an unified proof of Theorems \ref{T:Wreath_prop_T} and \ref{Thm:Main} as well as of similar results for the Bergman property and more.
+This is the subject of the forthcoming and more technical \cite{LS2021}, which gives an unified proof of Theorems \ref{T:Wreath_prop_T} and \ref{Thm:Main} as well as of similar results for the Bergman's property and more.
 %
 %
 %
@@ -60,8 +60,9 @@ The next section contains all the definitions as well as some examples, while Se
 %
 %\todo[inline]{Mettre ici les remerciements. Tu dois possiblement remercier la NSF. J'ai mis Alain en remerciement, je ne sais pas ce que tu en penses et si tu veux être plus spécifique.}
 \paragraph{Acknowledgment}
-The authors are thankful to A. Valette for comments on a previous version of this note.
-The first author was supported by NSF Grant No. 200021\textunderscore188578. The second author thanks Tatiana Nagnibeda for her comments and the NSF for its support.
+The authors are thankful to A. Valette and T. Nagnibeda for comments on a previous version of this note, and to the NSF for its support
+The first author was supported by NSF Grant No. 200021\textunderscore188578.
+% The second author thanks T. Nagnibeda for her comments and the NSF for its support.
 %
 %
 %
