--- a/Property FW and wreath products/Bouts/graphes/SchreierF2.tex
+++ b/Property FW and wreath products/Bouts/graphes/SchreierF2.tex
@@ -1,4 +1,5 @@
 \begin{tikzpicture}[node distance=1.14cm,every node/.style=blacknode]
+\useasboundingbox (-0.57,1.66) rectangle (5.15,-0.52);
 \node (00){} ;
 \coordinate[left =0.5cm of 00] (0a) ;
 \node (01)[right of=00]{} ;
