--- a/Property FW and wreath products/Medians/Proofs.Old.tex
+++ b/Property FW and wreath products/Medians/Proofs.Old.tex
@@ -25,7 +25,7 @@ Then $H$ acts on $X$ and $\orbite$ is a union of at most $[G:H]$ orbits. This di
 \end{proof}
 
 We also have the following lemma on semi-direct products:
-\begin{lem}\label{Lemma:Semidirect}
+\begin{lem}\label{Lemma:Semidirectb}
 Let $G=N\rtimes H$ be a semidirect product. Then
 \begin{enumerate}
 \item
@@ -46,7 +46,7 @@ Since $G$ acts by isometries, for every $h$ in $H$ the set $N.(h.x)=Nh.x=hN.x=h.
 Therefore, every element of $G.x=NH.x$ is at distance at most $d_1+d_2$ of $x$, which implies that the orbit $G.x$ is bounded. %, with diameter at most $d_1+2\cdot d_2$.
 \end{proof}
 Multiple applications of Lemma~\ref{Lemma:Semidirect} give us
-\begin{cor}\label{Cor:Wreath}
+\begin{cor}\label{Cor:Wreathb}
 Let $G\wr_X H$ be the wreath product of $G$ and $H\curvearrowright X$.
 Then
 \begin{enumerate}
@@ -206,7 +206,7 @@ By definition of the graph distance, we have $d_{Y^X}(\psi_y,\psi_{g.y})=d_Y(y,g
 %Since $\{g.y\}_{g\in G}$ is unbounded, so is $\{g.y,\{x\}\}_{g\in G}$.
 \end{proof}
 
-\begin{rem}\label{Rem:Actions}
+\begin{rem}\label{Rem:Actionsb}
 A reader familiar with wreath products might have recognized that we also used the primitive wreath action in the proof of the first part of Proposition~\ref{Prop:Median}.
 
 %On one hand, since $H$ acts on $X$, it acts on $\powersetf{X}$.
@@ -231,7 +231,7 @@ In all such places, the assertions will be preceded by the prefix ``meta''.
 
 Property FW is not isolated in the realm of group properties and other similar properties of great interest can also be defined in terms of action with bounded orbits.
 \todo[inline]{Add refs}
-\begin{defn}\label{Def:FHFA}
+\begin{defn}\label{Def:FHFAb}
 Let $G$ be a group.
 It is said to have \emph{property SB} if any action on a metric space has bounded orbits.
 It has \emph{property FH} if any action on a real Hilbert space has bounded orbits and \emph{property FA} if any action on a tree has bounded orbits.
