--- a/Property FW and wreath products/Medians/biblio.bib
+++ b/Property FW and wreath products/Medians/biblio.bib
@@ -5,6 +5,19 @@
 
 
 %% Saved with string encoding Unicode (UTF-8) 
+@book {MR0476875,
+    AUTHOR = {Serre, Jean-Pierre},
+     TITLE = {Arbres, amalgames, {${\SL}_{2}$}},
+      NOTE = {Avec un sommaire anglais,
+              Rédigé avec la collaboration de Hyman Bass,
+              Astérisque, No. 46},
+ PUBLISHER = {Société Mathématique de France, Paris},
+      YEAR = {1977},
+     PAGES = {189 pp. (1 plate)},
+   MRCLASS = {20H10 (22E40)},
+  MRNUMBER = {0476875 (57 \#16426)},
+MRREVIEWER = {E. Vinberg},
+}
 
 @ARTICLE{LS2020,
        author = {{Leemann}, Paul-Henry and {Schneeberger}, Gr{\'e}goire},
