--- a/Property FW and wreath products/Medians/Median.tex
+++ b/Property FW and wreath products/Medians/Median.tex
@@ -611,6 +611,9 @@ In particular, this $G$ action has an unbounded orbit.
 \end{proof}
 %
 %
+We now prove one last lemma that will be necessary fo the proof of Theorem~\ref{Thm:Main}.
+%
+%
 \begin{lem}\label{Lemma:Unboundedness}
 Let S be a structure that has compatible cartesian powers. If $X$ is finite and $G\wr_XH$ has property BS, then $G$ has property BS.
 \end{lem}
