--- a/Property FW and wreath products/Medians/biblio.bib
+++ b/Property FW and wreath products/Medians/biblio.bib
@@ -1,38 +1,65 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Grégoire Schneeberger at 2021-01-08 10:27:46 +0100 
+%% Created for Grégoire Schneeberger at 2021-01-15 16:55:18 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
-@book {MR0476875,
-    AUTHOR = {Serre, Jean-Pierre},
-     TITLE = {Arbres, amalgames, {${\SL}_{2}$}},
-      NOTE = {Avec un sommaire anglais,
-              Rédigé avec la collaboration de Hyman Bass,
-              Astérisque, No. 46},
- PUBLISHER = {Société Mathématique de France, Paris},
-      YEAR = {1977},
-     PAGES = {189 pp. (1 plate)},
-   MRCLASS = {20H10 (22E40)},
-  MRNUMBER = {0476875 (57 \#16426)},
-MRREVIEWER = {E. Vinberg},
-}
 
-@ARTICLE{LS2020,
-       author = {{Leemann}, Paul-Henry and {Schneeberger}, Gr{\'e}goire},
-        title = "{Property {FW} and wreath products of groups: a simple approach using Schreier graphs}",
-      journal = {arXiv e-prints},
-     keywords = {Mathematics - Group Theory},
-         year = 2021,
-        month = jan,
-          eid = {arXiv:2101.03817},
-        pages = {arXiv:2101.03817},
-archivePrefix = {arXiv},
-       eprint = {2101.03817},
- primaryClass = {math.GR},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv210103817L},
-}
+
+
+@article{MR1705337,
+	author = {Klav{\v{z}}ar, Sandi and Mulder, Henry Martyn},
+	date-added = {2021-01-15 16:52:21 +0100},
+	date-modified = {2021-01-15 16:52:43 +0100},
+	issn = {0835-3026},
+	journal = {J. Comb. Math. Comb. Comput.},
+	mendeley-groups = {Property{\_}FW{\_}and{\_}wreath{\_}product/Article graph m{\'{e}}dian},
+	pages = {103--127},
+	title = {{Median graphs: characterizations, location theory and related structures}},
+	volume = {30},
+	year = {1999}}
+
+@incollection{MR2405677,
+	author = {Bandelt, Hans-J{\"{u}}rgen and Chepoi, Victor},
+	booktitle = {Surv. Discret. Comput. Geom.},
+	date-added = {2021-01-15 16:52:21 +0100},
+	date-modified = {2021-01-15 16:52:29 +0100},
+	doi = {10.1090/conm/453/08795},
+	mendeley-groups = {Property{\_}FW{\_}and{\_}wreath{\_}product/Article graph m{\'{e}}dian},
+	pages = {49--86},
+	publisher = {Amer. Math. Soc., Providence, RI},
+	series = {Contemp. Math.},
+	title = {{Metric graph theory and geometry: a survey}},
+	url = {https://doi.org/10.1090/conm/453/08795},
+	volume = {453},
+	year = {2008},
+	Bdsk-Url-1 = {https://doi.org/10.1090/conm/453/08795}}
+
+@book{MR0476875,
+	author = {Serre, Jean-Pierre},
+	mrclass = {20H10 (22E40)},
+	mrnumber = {0476875 (57 \#16426)},
+	mrreviewer = {E. Vinberg},
+	note = {Avec un sommaire anglais, R{\'e}dig{\'e} avec la collaboration de Hyman Bass, Ast{\'e}risque, No. 46},
+	pages = {189 pp. (1 plate)},
+	publisher = {Soci{\'e}t{\'e} Math{\'e}matique de France, Paris},
+	title = {Arbres, amalgames, {${\SL}_{2}$}},
+	year = {1977}}
+
+@article{LS2020,
+	adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv210103817L},
+	archiveprefix = {arXiv},
+	author = {{Leemann}, Paul-Henry and {Schneeberger}, Gr{\'e}goire},
+	eid = {arXiv:2101.03817},
+	eprint = {2101.03817},
+	journal = {arXiv e-prints},
+	keywords = {Mathematics - Group Theory},
+	month = jan,
+	pages = {arXiv:2101.03817},
+	primaryclass = {math.GR},
+	title = {{Property {FW} and wreath products of groups: a simple approach using Schreier graphs}},
+	year = 2021}
 
 @article{MR1213151,
 	author = {Brick, Stephen G},
