--- a/Property FW and wreath products/Medians/Definitions.Old.tex
+++ b/Property FW and wreath products/Medians/Definitions.Old.tex
@@ -147,7 +147,7 @@ This is naturally a group, where multiplication is taken componentwise.
 If $H$ is a group acting on $X$, then it naturally acts on $\bigoplus_XG$
 by $(h.\varphi)(x)=\varphi(h^{-1}.x)$.
 This leads to the following standard definition
-\begin{defn}\label{Def:WreathProd}
+\begin{defn}\label{Def:WreathProdb}
 Let $G$ and $H$ be groups and $X$ be a set on which $H$ acts.
 The \emph{(retricted) wreath product} $G\wr_XH$ is the group $(\bigoplus_XG)\rtimes H$.
 \end{defn}
